applications/grafana/overlays/ocp/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    network-policy-generator.stackrox.io/generated: "true"
  name: stackrox-generated-grafana
  namespace: sigaint-monitoring
spec:
  ingress:
    - ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/instance: grafana
      app.kubernetes.io/name: grafana
  policyTypes:
    - Ingress
